
- default index.html now has text/javascript added to script tags. Closes #71
- server.js now handles namespaced prefixes. Closes #74

- label_view now defaults to the span tag.  Closes #75.  (Thanks Erich!)

- Added support for posting data in both URL-encoded and JSON formats via
  SC.server.  This makes for a much cleaner round-trip.  To use this, set the
  postFormat: property to SC.JSON_FORMAT in SC.server.  Closes #49. 
  (Thanks Mauris Lamers!)
  
- The newRecord property is now set to false once a record has been 
  successfully sent back to the server.  A new internal property tracks when 
  you are waiting on a record to be created on the server and refuses to 
  submit it a second time. Closes #81 (Thanks Gareth!)
  
- All internal calls for arguments.callee.base.apply() have now been switched 
  to sc_super().  This means you MUST use version 0.9.13 or later of the build 
  tools to work with the javascript.

- Fixed a memory leak in IE that was caused by a self-reference to document. 
  (Thanks Juan)

- Improved documentation for a variety of classes. (Thanks gskluzacek)

- SC.Server can now handled nested Server prefixes in case you have 
  multi-level namespaces.

== sproutcore 0.9.12

- SC.ButtonView & SC.MenuItemView now removes and adds the 'active' class name on mouseExited and mouseEntered when the mouse is pressed to provide better indication of whether an action will occur on mouse up. (Thanks schwa23)

- SC.Record#toString now shows record type in description.

- [FIX] SC.Timer now computes the next fire time before it executes your callback action.  This should avoid the situation where a timer would call your action, which would then take it past the last time it should fire and hence the last fire would never happen. (Thanks August)

- [FIX] SC.Record#matchCondition() did not behave correctly when comparing record instances.  Fix by onitunes includes both a faster comparison method along with correct behavior + kickin' unit tests
