@@ -236,6 +236,32 @@ Test.context("SC.ObjectController", {
       this.single.didCommitChanges.shouldEqual(YES) ;
     },
     
+    "Should update both values when commitChanges() on content objects" : function() {
+      cc = SC.CollectionController.create({
+        allowsEmptySelection: false,
+        allowsMultipleSelection: false
+      });
+      var oc = SC.ObjectController.create({
+        contentBinding: 'cc.selection',
+        commitChangesImmediately: false
+      });
+      var Contact = SC.Record.extend({});
+      
+      var rcrds = Contact.collection();
+      cc.set('content', rcrds);
+      rcrds.refresh();
+      var single = Contact.create({'test' : 'NAME1', 'value' : 0});
+      
+      rcrds.count().shouldEqual(1);
+      
+      oc.set('test', 'NAME2');
+      oc.set('value', 123);
+      
+      $ok(oc.commitChanges()).shouldEqual(YES);
+      single.get('test').shouldEqual('NAME2');
+      single.get('value').shouldEqual(123);
+    },
+    
     "Support content objects that implement SC.Array but are not arrays": function() {
       this.c.set('content', this.dummy_a) ;
 
